--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "echarts": "^4.4.0",
+    "echarts": "^4.8.0",
     "element-ui": "2.12.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
@@ -23,6 +23,7 @@
     "nuxt": "^1.0.0",
     "popper.js": "^1.16.0",
     "save": "^2.4.0",
+    "video.js": "^7.8.3",
     "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
